Fixed element alignment. Added Responsive mode (auto size field)

--- a/samegame.css
+++ b/samegame.css
@@ -1,12 +1,47 @@
-.box {
+
+.ufld {
+    width: auto;
+    margin: auto;
+    position: relative;
+}
+
+.field.absolute {
+    padding-top: 50px;
+    margin-top: 50px;
+    position: absolute;
+    width: auto;
+    height: 500px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    border: 4px solid #cccccc;
+    background: #1f1d2b;
+    border-radius: 3px;
+    color: white;
+    text-align: center;
+}
+
+.box.fixed {
     position: fixed;
-    display:block;
-    box-sizing: border-box;
+    display: block;
+    border-top: 2px solid red; border-right: 2px solid red; border-bottom: 2px solid red; border-left: 2px solid red;
+    /*box-sizing: border-box;*/
     background-color: none;
-    box-shadow:
-        inset 0 0 5px #fff;
-    border-radius: 20%;           
-    }
+    box-shadow: inset 0 0 5px #fff;
+    border-radius: 20%;
+}
+.ebox.fixed {
+    position: fixed;
+    display: block;
+    border-top: 2px solid gray;
+    border-right: 2px solid gray;
+    border-bottom: 2px solid gray;
+    border-left: 2px solid gray;
+    /*box-sizing: border-box;*/
+    background-color: none;
+    box-shadow: inset 0 0 5px #fff;
+    border-radius: 20%;
+}
 
 .top_center{
     position: fixed;
@@ -29,21 +64,6 @@ div#pop-up {
     border: 1px solid #1a1a1a;
     font-size: 90%;
     z-index: 999;
-}
-
-.field {
-    width: 508px;
-    height: 500px;
-    left:38px;
-    top:48px;
-    margin-left: auto;
-    margin-right: auto;
-    position: absolute; /* Ensure absolute positioned child elements are relative to this*/
-    border:4px solid #cccccc;
-    background: #1f1d2b;
-    border-radius: 3px;  
-    color: white;
-    text-align: center;
 }
 
 .wrapper {
